--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>TeleChat</title>
   </head>
   <body class="animation-level-2 is-left-column-shown">
     <noscript>You need to enable JavaScript to run this app.</noscript>
